kustomize/overlays/scots-lab/apps/changedetection/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: changedetection
  namespace: changedetection
  annotations:
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: Changedetection
    gethomepage.dev/group: Monitoring
    gethomepage.dev/description: Web Change Monitor
    gethomepage.dev/icon: changedetection-io.png
    gethomepage.dev/href: https://changes.srbii.com
    gethomepage.dev/weight: '50'
spec:
  parentRefs:
  - name: kgateway-http
    namespace: kgateway-system
  hostnames:
  - changes.srbii.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: changedetection-app
      port: 4180
